[package]
name = "byte_buster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27"
log = "0.4"
env_logger = "0.11"
hex = "0.4"
crossbeam-channel = "0.5"
rodio = "0.17"

[[bin]]
name = "byte_buster_server"
path = "src/server.rs"
